[gd_scene load_steps=7 format=3 uid="uid://7nm4qtush4cw"]

[ext_resource type="PackedScene" uid="uid://dkxqj3l0xm8uw" path="res://creator/selection/inspector/categories/inspector_category_base.tscn" id="1_n8pa6"]
[ext_resource type="Script" path="res://creator/selection/inspector/categories/inspector_terrain.gd" id="2_1g561"]
[ext_resource type="PackedScene" uid="uid://yl2tfblvbyak" path="res://creator/selection/inspector/primitive/inspector_number_field.tscn" id="3_67u68"]
[ext_resource type="Texture2D" uid="uid://boqxb7htsu2hv" path="res://ui/art/rotate.svg" id="4_7s5v7"]
[ext_resource type="PackedScene" uid="uid://cux00rc5b2cu6" path="res://creator/selection/inspector/primitive/inspector_text_field.tscn" id="4_eepbf"]
[ext_resource type="FontVariation" uid="uid://bwp6hb31ol8la" path="res://ui/new_player_ui/inventory/title_font_bold.tres" id="5_8l3ps"]

[node name="InspectorTerrain" instance=ExtResource("1_n8pa6")]
script = ExtResource("2_1g561")

[node name="Text" parent="CategoryTitle/ToggleButton/Name" index="3"]
text = "TERRAIN"

[node name="TerrainSeed" parent="Properties/MarginContainer/PropertyList" index="0" instance=ExtResource("3_67u68")]
layout_mode = 2
step = 1.0
label_text = "Seed"

[node name="Label" parent="Properties/MarginContainer/PropertyList/TerrainSeed/LabelHolder" index="0"]
custom_minimum_size = Vector2(100, 30)
text = "Seed"

[node name="SpinBox" parent="Properties/MarginContainer/PropertyList/TerrainSeed/SpinBoxHolder" index="0"]
step = 1.0

[node name="TerrainHeightStart" parent="Properties/MarginContainer/PropertyList" index="1" instance=ExtResource("3_67u68")]
layout_mode = 2
label_text = "Height Start"

[node name="Label" parent="Properties/MarginContainer/PropertyList/TerrainHeightStart/LabelHolder" index="0"]
custom_minimum_size = Vector2(100, 30)
text = "Height Start"

[node name="TerrainHeightRange" parent="Properties/MarginContainer/PropertyList" index="2" instance=ExtResource("3_67u68")]
layout_mode = 2
label_text = "Height Range"

[node name="Label" parent="Properties/MarginContainer/PropertyList/TerrainHeightRange/LabelHolder" index="0"]
custom_minimum_size = Vector2(100, 30)
text = "Height Range"

[node name="TerrainMaterialName" parent="Properties/MarginContainer/PropertyList" index="3" instance=ExtResource("4_eepbf")]
layout_mode = 2
label_text = "Material Name"

[node name="TerrainGeneratorName" parent="Properties/MarginContainer/PropertyList" index="4" instance=ExtResource("4_eepbf")]
layout_mode = 2
label_text = "Generator Name"

[node name="TerrainNoiseType" parent="Properties/MarginContainer/PropertyList" index="5" instance=ExtResource("3_67u68")]
layout_mode = 2
reset_value = 1.0
current_value = 1.0
label_text = "Noise Type"

[node name="Label" parent="Properties/MarginContainer/PropertyList/TerrainNoiseType/LabelHolder" index="0"]
custom_minimum_size = Vector2(100, 30)
text = "Noise Type"

[node name="SpinBox" parent="Properties/MarginContainer/PropertyList/TerrainNoiseType/SpinBoxHolder" index="0"]
value = 1.0

[node name="RegenerateButton" type="HBoxContainer" parent="Properties/MarginContainer/PropertyList" index="6"]
layout_mode = 2

[node name="RegenerateButton" type="Button" parent="Properties/MarginContainer/PropertyList/RegenerateButton" index="0"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(320, 32)
layout_mode = 2
size_flags_horizontal = 3

[node name="Regenerate" type="HBoxContainer" parent="Properties/MarginContainer/PropertyList/RegenerateButton/RegenerateButton" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_right = -8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
metadata/_edit_layout_mode = 1

[node name="Plus" type="TextureRect" parent="Properties/MarginContainer/PropertyList/RegenerateButton/RegenerateButton/Regenerate" index="0"]
custom_minimum_size = Vector2(12, 12)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("4_7s5v7")
expand_mode = 1

[node name="Text" type="Label" parent="Properties/MarginContainer/PropertyList/RegenerateButton/RegenerateButton/Regenerate" index="1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_8l3ps")
theme_override_font_sizes/font_size = 14
text = "REGENERATE"
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="LowerYLimit" parent="Properties/MarginContainer/PropertyList" index="7" instance=ExtResource("3_67u68")]
layout_mode = 2
label_text = "Lower Y Limit"

[node name="Label" parent="Properties/MarginContainer/PropertyList/LowerYLimit/LabelHolder" index="0"]
custom_minimum_size = Vector2(100, 30)
text = "Lower Y Limit"

[node name="ResetButton" type="HBoxContainer" parent="Properties/MarginContainer/PropertyList" index="8"]
layout_mode = 2

[node name="ResetButton" type="Button" parent="Properties/MarginContainer/PropertyList/ResetButton" index="0"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(320, 32)
layout_mode = 2
size_flags_horizontal = 3

[node name="Reset" type="HBoxContainer" parent="Properties/MarginContainer/PropertyList/ResetButton/ResetButton" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_right = -8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
metadata/_edit_layout_mode = 1

[node name="Plus" type="TextureRect" parent="Properties/MarginContainer/PropertyList/ResetButton/ResetButton/Reset" index="0"]
custom_minimum_size = Vector2(12, 12)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("4_7s5v7")
expand_mode = 1

[node name="Text" type="Label" parent="Properties/MarginContainer/PropertyList/ResetButton/ResetButton/Reset" index="1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("5_8l3ps")
theme_override_font_sizes/font_size = 14
text = "RESET CHANGES"
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[connection signal="value_changed" from="Properties/MarginContainer/PropertyList/TerrainSeed" to="." method="_on_terrain_seed_value_changed"]
[connection signal="value_changed" from="Properties/MarginContainer/PropertyList/TerrainHeightStart" to="." method="_on_terrain_height_start_value_changed"]
[connection signal="value_changed" from="Properties/MarginContainer/PropertyList/TerrainHeightRange" to="." method="_on_terrain_height_range_value_changed"]
[connection signal="pressed" from="Properties/MarginContainer/PropertyList/RegenerateButton/RegenerateButton" to="." method="_on_regenerate_button_pressed"]
[connection signal="pressed" from="Properties/MarginContainer/PropertyList/ResetButton/ResetButton" to="." method="_on_reset_button_pressed"]

[editable path="Properties/MarginContainer/PropertyList/TerrainSeed"]
[editable path="Properties/MarginContainer/PropertyList/TerrainHeightStart"]
[editable path="Properties/MarginContainer/PropertyList/TerrainHeightRange"]
[editable path="Properties/MarginContainer/PropertyList/TerrainNoiseType"]
[editable path="Properties/MarginContainer/PropertyList/LowerYLimit"]
